--- a/react/src/components/login/css/LoginForm.css
+++ b/react/src/components/login/css/LoginForm.css
@@ -1,20 +1,20 @@
 
         .btn-custom {
-            background-color: #3A107C;
-            border-color: #3A107C;
+            background-color: #4e8ed8;
+            border-color: #4e8ed8;
             color: #fdfdfd;
             font-weight: bold;
             transition: background-color 0.4s;
         }
 
         .btn-custom:hover {
-            background-color: #5016af;
-            border-color: #5016af;
+            background-color: #1a78e4;
+            border-color: #1a78e4;
             color: #FFFFFF;
         }
 
         .text-purple-dark {
-            color: #3A107C;
+            color: #202170;
         }
 
         .login-container {
@@ -28,7 +28,7 @@
         }
 
         .card-login {
-            border-top: 5px solid #3A107C;
-            border-radius: 35px;
+            border-top: 5px solid #4e8ed8;
+            border-radius: 40px;
 
         }
