--- a/react/src/components/register/css/RegisterForm.css
+++ b/react/src/components/register/css/RegisterForm.css
@@ -1,34 +1,32 @@
+.btn-custom {
+    background-color: #4e8ed8;
+    border-color: #4e8ed8;
+    color: #fdfdfd;
+    font-weight: bold;
+    transition: background-color 0.4s;
+}
 
-        .btn-custom {
-            background-color: #3A107C;
-            border-color: #3A107C;
-            color: #fdfdfd;
-            font-weight: bold;
-            transition: background-color 0.4s;
-        }
+.btn-custom:hover {
+    background-color: #1a78e4;
+    border-color: #1a78e4;
+    color: #FFFFFF;
+}
 
-        .btn-custom:hover {
-            background-color: #5016af;
-            border-color: #5016af;
-            color: #FFFFFF;
-        }
+.text-purple-dark {
+    color: #202170;
+}
 
-        .text-purple-dark {
-            color: #3A107C;
-        }
+.signup-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 20px;
+}
 
-        .signup-container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            padding: 20px;
-        
-        }
-        .card-signup {
-            border-top: 5px solid #3A107C;
-            border-radius: 35px;
-
-        }
+.card-signup {
+    border-top: 5px solid #4e8ed8;
+    border-radius: 40px;
+}
