--- a/react/src/App.css
+++ b/react/src/App.css
@@ -2,3 +2,4 @@ html, body, #root {
     width: 100%;
     height: 100%;
 }
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
